--- a/wsgi/templates/login.html
+++ b/wsgi/templates/login.html
@@ -1,14 +1,16 @@
-{% extends "layout.html" %}
-
-{% block body %}
-  <h2>Login</h2>
-  <form action="" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Remember Me:
-      <dd><input type=checkbox name=remember value=yes>
-      <dd><input type=submit value=Login>
-    </dl>
-  </form>
-{% endblock %}
+<!doctype html>
+<html>
+<head><title>Login</title></head>
+<body>
+<form action="{{ url_for('login') }}" method="post">
+  {{ form.hidden_tag() }}
+  <table class="centered">
+    <tbody>
+      <tr><td>{{ form.username.label }}</td><td>{{ form.username }}</td></tr>
+      <tr><td>{{ form.password.label }}</td><td>{{ form.password }}</td></tr>
+      <tr><td></td><td>{{ form.submit }}</td></tr>
+    </tbody>
+  </table>
+</form>
+</body>
+</html>
