add registration form

--- a/wsgi/templates/login.html
+++ b/wsgi/templates/login.html
@@ -8,7 +8,7 @@
     <tbody>
       <tr><td>{{ form.username.label }}</td><td>{{ form.username }}</td></tr>
       <tr><td>{{ form.password.label }}</td><td>{{ form.password }}</td></tr>
-      <tr><td></td><td>{{ form.submit }}</td></tr>
+      <tr><td></td><td>{{ form.submit }}<a href='/register'>Register</a></td></tr>
     </tbody>
   </table>
 </form>
